# naverspeech-sdk-ios

./: NOTICE  NOTICE.txt  PrivacyInfo.xcprivacy  README.md
AutoModeSample/: AppDelegate.swift  AutoViewController.swift  Info.plist
AutoModeSample/Base.lproj/: Main.storyboard
Common/: Common.h  Languages.swift
HybridModeSample/: AppDelegate.swift  HybridViewController.swift  Info.plist
HybridModeSample/Base.lproj/: Main.storyboard
ManualModeSample/: AppDelegate.swift  Info.plist  ManualViewController.swift
ManualModeSample/Base.lproj/: Main.storyboard
NaverSpeechSampleApp.xcodeproj/: project.pbxproj
NaverSpeechSampleApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
docs/: Enums.html  Functions.html  index.html  undocumented.json
docs/Classes/: NSKRecognizedResult.html  NSKRecognizer.html  NSKRecognizerConfiguration.html
docs/Protocols/: NSKRecognizerDelegate.html
docs/docsets/: NaverSpeech.tgz
docs/docsets/NaverSpeech.docset/Contents/: Info.plist
docs/docsets/NaverSpeech.docset/Contents/Resources/: docSet.dsidx
docs/docsets/NaverSpeech.docset/Contents/Resources/Documents/: Classes.html  Constants.html  Protocols.html  index.html
framework/NaverSpeech.framework/: .gitignore  Info.plist  Makefile.am  Makefile.in  NaverSpeech  PrivacyInfo.xcprivacy  libnsclient.la
framework/NaverSpeech.framework/Headers/: NMSpeechErrors.h  NSKRecognizedResult.h  NSKRecognizer.h  NSKRecognizerConfiguration.h  NSKType.h  NaverSpeech.h
framework/NaverSpeech.framework/Modules/: module.modulemap
(+3 files in other folders)
